force-app/main/default/objects/Property_Specification__c/Property_Specification__c.object-meta.xml
<CustomObject>
    <description>Structured, per-unit-type specifications for a Property. Modelled as a child object rather than fields on Property__c because one project sells several unit types, each with its own carpet area, built-up area and floor plan. The agent quotes these directly instead of parsing free text.</description>
    <label>Property Specification</label>
    <nameField>
        <label>Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>