force-app/main/default/objects/Property_Specification__c/fields/Built_up_Area__c.field-meta.xml
<CustomField>
    <fullName>Built_up_Area__c</fullName>
    <description>Built-up area of this unit type, in square feet.</description>
    <label>Built-up Area (sq ft)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>