force-app/main/default/objects/Property_Specification__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <description>RERA carpet area of this unit type, in square feet.</description>
    <label>Carpet Area (sq ft)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>