force-app/main/default/objects/Property_Specification__c/fields/Floor_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_URL__c</fullName>
    <description>Reference to the floor plan for this unit type - either the public/CDN link the chatbot renders inline, or the distribution URL of the Salesforce file. For the file itself, see the Floor Plan document linked to the parent Property.</description>
    <label>Floor Plan Reference</label>
    <type>Url</type>
</CustomField>