force-app/main/default/objects/Property_Specification__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>The project this specification belongs to. Master-detail so specs are never orphaned and roll up with the property record.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>